# agent-ops-kit

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
examples/: cost_analysis.py  demo.py
examples/saas_analyst/: agent.json  settings.json  settings.local.json
examples/saas_analyst/guides/: metric-definitions.md  reporting-format.md
examples/saas_analyst/memory/: activation-definition-change.md  expansion-revenue-priority.md
examples/saas_analyst/skills/: churn-analysis.md  funnel-conversion.md  revenue-analysis.md
src/agent_ops/: __init__.py  _match.py  agent.py  cli.py  frontmatter.py  guides.py  hooks.py  llm.py  memory.py  permissions.py  skills.py
tests/: conftest.py  test_agent.py  test_cli.py  test_frontmatter.py  test_guides.py  test_integration.py  test_match.py  test_memory.py  test_permissions.py  test_skills.py
