[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ops-kit"
version = "0.1.0"
description = "A framework for building domain-agnostic LLM operations agents: skill routing, on-demand context, persistent memory, tiered permissions."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Marc Albert" }]
requires-python = ">=3.9"
keywords = ["llm", "agent", "anthropic", "claude", "operations", "rag"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
agent-ops = "agent_ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
ignore_missing_imports = true   # anthropic is an optional, untyped-at-import dep
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
